{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 461,
  "lineage": "9812725b-3dd6-afc8-5d1a-863acfce8284",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "gmuxdemo_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:000057250775:loadbalancer/app/gmuxdemo-dev-alb/7ed29f5897181d8e",
            "arn_suffix": "app/gmuxdemo-dev-alb/7ed29f5897181d8e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "gmuxdemo-dev-alb-1996093814.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:000057250775:loadbalancer/app/gmuxdemo-dev-alb/7ed29f5897181d8e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gmuxdemo-dev-alb",
            "security_groups": [
              "sg-086110da113db442c",
              "sg-0f92d1a09e7a26dd5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06fedba45a10b1118"
              },
              {
                "subnet_id": "subnet-0bfbe6685dc590077"
              }
            ],
            "subnets": [
              "subnet-06fedba45a10b1118",
              "subnet-0bfbe6685dc590077"
            ],
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "vpc_id": "vpc-0ce30fe4bd8f8b04b",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_internet_gateway.gmuxdemo_ecs_igw",
            "aws_security_group.gmuxdemo_ecs_security_group_egress",
            "aws_security_group.gmuxdemo_http_security_group",
            "aws_subnet.gmuxdemo_ecs_public_subnet1",
            "aws_subnet.gmuxdemo_ecs_public_subnet2",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "gmuxdemo_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:000057250775:listener/app/gmuxdemo-dev-alb/7ed29f5897181d8e/9403d6b7eaee6d4b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:000057250775:targetgroup/gmuxdemo-dev-alb-target-group/913dcc3cde275a2a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:000057250775:listener/app/gmuxdemo-dev-alb/7ed29f5897181d8e/9403d6b7eaee6d4b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:000057250775:loadbalancer/app/gmuxdemo-dev-alb/7ed29f5897181d8e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.gmuxdemo_alb",
            "aws_internet_gateway.gmuxdemo_ecs_igw",
            "aws_lb_target_group.gmuxdemo_alb_target_group",
            "aws_security_group.gmuxdemo_ecs_security_group_egress",
            "aws_security_group.gmuxdemo_http_security_group",
            "aws_subnet.gmuxdemo_ecs_public_subnet1",
            "aws_subnet.gmuxdemo_ecs_public_subnet2",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gmuxdemo_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7845e4f0aa80e23",
            "domain": "vpc",
            "id": "eipalloc-0a7845e4f0aa80e23",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-229-201-186.us-west-2.compute.amazonaws.com",
            "public_ip": "44.229.201.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gmuxdemo_ecs_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:internet-gateway/igw-0ea0a7e2761415d8d",
            "id": "igw-0ea0a7e2761415d8d",
            "owner_id": "000057250775",
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gmuxdemo_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:000057250775:targetgroup/gmuxdemo-dev-alb-target-group/913dcc3cde275a2a",
            "arn_suffix": "targetgroup/gmuxdemo-dev-alb-target-group/913dcc3cde275a2a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:000057250775:targetgroup/gmuxdemo-dev-alb-target-group/913dcc3cde275a2a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "gmuxdemo-dev-alb-target-group",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "dependencies": [
            "aws_alb.gmuxdemo_alb",
            "aws_internet_gateway.gmuxdemo_ecs_igw",
            "aws_security_group.gmuxdemo_ecs_security_group_egress",
            "aws_security_group.gmuxdemo_http_security_group",
            "aws_subnet.gmuxdemo_ecs_public_subnet1",
            "aws_subnet.gmuxdemo_ecs_public_subnet2",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gmuxdemo_ecs_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7845e4f0aa80e23",
            "connectivity_type": "public",
            "id": "nat-0e780595e5393b250",
            "network_interface_id": "eni-0227303a01d8475be",
            "private_ip": "10.0.1.107",
            "public_ip": "44.229.201.186",
            "subnet_id": "subnet-06fedba45a10b1118",
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            }
          },
          "dependencies": [
            "aws_eip.gmuxdemo_elastic_ip",
            "aws_subnet.gmuxdemo_ecs_public_subnet1",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gmuxdemo_ecs_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06ee3c2f76804519b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e780595e5393b250",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ee3c2f76804519b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gmuxdemo_elastic_ip",
            "aws_nat_gateway.gmuxdemo_ecs_ngw",
            "aws_route_table.gmuxdemo_ecs_private_route_table",
            "aws_subnet.gmuxdemo_ecs_public_subnet1",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gmuxdemo_ecs_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ea0a7e2761415d8d",
            "id": "r-rtb-0c613abe41cae80a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c613abe41cae80a7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gmuxdemo_ecs_igw",
            "aws_route_table.gmuxdemo_ecs_public_route_table",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gmuxdemo_vpce_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a6049225b87f4c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e780595e5393b250",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a6049225b87f4c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gmuxdemo_elastic_ip",
            "aws_nat_gateway.gmuxdemo_ecs_ngw",
            "aws_route_table.gmuxdemo_vpce_route_table",
            "aws_subnet.gmuxdemo_ecs_public_subnet1",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gmuxdemo_ecs_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:route-table/rtb-06ee3c2f76804519b",
            "id": "rtb-06ee3c2f76804519b",
            "owner_id": "000057250775",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gmuxdemo_ecs_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:route-table/rtb-0c613abe41cae80a7",
            "id": "rtb-0c613abe41cae80a7",
            "owner_id": "000057250775",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gmuxdemo_vpce_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:route-table/rtb-09a6049225b87f4c7",
            "id": "rtb-09a6049225b87f4c7",
            "owner_id": "000057250775",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gmuxdemo_ecs_route_table_private_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4104609c4554cf8",
            "route_table_id": "rtb-06ee3c2f76804519b",
            "subnet_id": "subnet-04373c9ca59b266b7"
          },
          "dependencies": [
            "aws_route_table.gmuxdemo_ecs_private_route_table",
            "aws_subnet.gmuxdemo_ecs_private_subnet1",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gmuxdemo_ecs_route_table_private_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f63670785767ab1",
            "route_table_id": "rtb-06ee3c2f76804519b",
            "subnet_id": "subnet-0b6319d24a099ef10"
          },
          "dependencies": [
            "aws_route_table.gmuxdemo_ecs_private_route_table",
            "aws_subnet.gmuxdemo_ecs_private_subnet2",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gmuxdemo_ecs_route_table_public_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4305322633c146b",
            "route_table_id": "rtb-0c613abe41cae80a7",
            "subnet_id": "subnet-06fedba45a10b1118"
          },
          "dependencies": [
            "aws_route_table.gmuxdemo_ecs_public_route_table",
            "aws_subnet.gmuxdemo_ecs_public_subnet1",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gmuxdemo_ecs_route_table_public_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0923832e1cffc8c8b",
            "route_table_id": "rtb-0c613abe41cae80a7",
            "subnet_id": "subnet-0bfbe6685dc590077"
          },
          "dependencies": [
            "aws_route_table.gmuxdemo_ecs_public_route_table",
            "aws_subnet.gmuxdemo_ecs_public_subnet2",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gmuxdemo_ecs_security_group_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:security-group/sg-0f92d1a09e7a26dd5",
            "description": "ecs allowed egress ports",
            "egress": [],
            "id": "sg-0f92d1a09e7a26dd5",
            "ingress": [],
            "name": "gmuxdemo-dev-ecs-security-group-egress",
            "name_prefix": "",
            "owner_id": "000057250775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gmuxdemo_ecs_security_group_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:security-group/sg-09f6ae86d45fde399",
            "description": "ecs allowed ingress ports",
            "egress": [],
            "id": "sg-09f6ae86d45fde399",
            "ingress": [],
            "name": "gmuxdemo-dev-ecs-security-group-ingress",
            "name_prefix": "",
            "owner_id": "000057250775",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gmuxdemo_http_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:security-group/sg-086110da113db442c",
            "description": "HTTP traffic",
            "egress": [],
            "id": "sg-086110da113db442c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gmuxdemo-dev-http-security-group",
            "name_prefix": "",
            "owner_id": "000057250775",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gmuxdemo_ecs_security_group_rule_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2436766986",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f92d1a09e7a26dd5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gmuxdemo_ecs_security_group_egress",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "gmuxdemo_ecs_security_group_rule_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8000,
            "id": "sgrule-4032903712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f6ae86d45fde399",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.gmuxdemo_ecs_security_group_ingress",
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gmuxdemo_ecs_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:subnet/subnet-04373c9ca59b266b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04373c9ca59b266b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000057250775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gmuxdemo_ecs_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:subnet/subnet-0b6319d24a099ef10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6319d24a099ef10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000057250775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gmuxdemo_ecs_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:subnet/subnet-06fedba45a10b1118",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fedba45a10b1118",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000057250775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gmuxdemo_ecs_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:subnet/subnet-0bfbe6685dc590077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfbe6685dc590077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000057250775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            },
            "vpc_id": "vpc-0ce30fe4bd8f8b04b"
          },
          "dependencies": [
            "aws_vpc.gmuxdemo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gmuxdemo_ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:000057250775:vpc/vpc-0ce30fe4bd8f8b04b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0791afa89b0edac47",
            "default_route_table_id": "rtb-05ea955ff8a77f4d2",
            "default_security_group_id": "sg-0582c040fd5b0d0d8",
            "dhcp_options_id": "dopt-96b275f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ce30fe4bd8f8b04b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ea955ff8a77f4d2",
            "owner_id": "000057250775",
            "tags": {
              "Name": "gmuxdemo-dev"
            },
            "tags_all": {
              "Name": "gmuxdemo-dev"
            }
          }
        }
      ]
    }
  ]
}